objects/QualificationDocumentStep__c.object
<CustomObject>
    <fields>
        <fullName>DocumentStatusDate__c</fullName>
        <description>The date the qualification document step reached this status.</description>
        <inlineHelpText>The date the qualification document step reached this status.</inlineHelpText>
        <label>Document Status Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DocumentStatusEIDFormula__c</fullName>
        <formula>DocumentStatus__r.DocumentStatusEID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DocumentStatusEIDFormula</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DocumentStatusRankOrderFormula__c</fullName>
        <formula>DocumentStatus__r.RankOrder__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Status Rank Order Formula</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DocumentStatusRankSummar__c</fullName>
        <label>Document Status Rank Summary</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DocumentStatusStepOrder__c</fullName>
        <description>Brings the Document Status Rank Order</description>
        <formula>DocumentStep__r.StepOrder__c</formula>
        <inlineHelpText>Brings the Document Status Rank Order</inlineHelpText>
        <label>Document Status Step Order Formula</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DocumentStatus__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The status of this document step.</description>
        <inlineHelpText>The status of this document step.</inlineHelpText>
        <label>Document Status</label>
        <referenceTo>DocumentStatus__c</referenceTo>
        <relationshipLabel>Qualification Document Steps</relationshipLabel>
        <relationshipName>QualificationDocumentSteps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DocumentStep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The document step used by this record.</description>
        <inlineHelpText>The document step used by this record.</inlineHelpText>
        <label>Document Step</label>
        <referenceTo>DocumentStep__c</referenceTo>
        <relationshipLabel>Qualification Document Steps</relationshipLabel>
        <relationshipName>QualificationRoleSteps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QDOEmployeeSource__c</fullName>
        <description>Used to Populate the Employee Source Eid Formula from the Qualification Document Option.</description>
        <inlineHelpText>Used to Populate the Employee Source Eid Formula from the Qualification Document Option.</inlineHelpText>
        <label>QDO Employee Source</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QDRDocumentStatusFormula__c</fullName>
        <formula>if(  ISBLANK(QualificationDocumentRequirement__r.DocumentStatus__c ) ,1,2)</formula>
        <label>QDRDocumentStatusFormula</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPSCertificationEIDFormula__c</fullName>
        <description>Qualification process stage EID from Document Step</description>
        <formula>DocumentStep__r.QualificationProcessStage__r.QualificationProcessStageEID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QPS EID Formula</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPSIncertificationProcessEID__c</fullName>
        <formula>If (DocumentStep__r.QualificationProcessStage__r.InCertificationProcessBit__c,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QPS Incertification Process EID Formula</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPSRankOrderFormula__c</fullName>
        <description>This formula is used to retrieve the Rank Order of the Qualification Document Step.</description>
        <formula>DocumentStep__r.QualificationProcessStage__r.RankOrder__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This formula is used to retrieve the Rank Order of the Qualification Document Step.</inlineHelpText>
        <label>QPS Rank Order Formula</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QualificationDocumentRequirement__c</fullName>
        <description>The document requirement associated with this document step for this employee</description>
        <inlineHelpText>The document requirement associated with this document step for this employee</inlineHelpText>
        <label>Qualification Document Requirement</label>
        <referenceTo>QualificationDocumentRequirement__c</referenceTo>
        <relationshipLabel>Qualification Document Steps</relationshipLabel>
        <relationshipName>QualificationFunctions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>QualificationDocumentStepEID__c</fullName>
        <description>The Enterprise ID for this Qualification Document Step record.</description>
        <externalId>true</externalId>
        <inlineHelpText>The Enterprise ID for this Qualification Document Step record.</inlineHelpText>
        <label>Qualification Document Step EID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <label>Qualification Document Step</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>DocumentStep__c</columns>
        <columns>QualificationDocumentRequirement__c</columns>
        <columns>DocumentStatusDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Qualification Document Step Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Qualification Document Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>